tests/snapshots/d8__part_1_example-2.snap
---
source: tests/d8.rs
expression: example_2
---
Map {
    instructions: [
        Left,
        Left,
        Right,
    ],
    nodes: {
        "AAA": (
            "BBB",
            "BBB",
        ),
        "BBB": (
            "AAA",
            "ZZZ",
        ),
        "ZZZ": (
            "ZZZ",
            "ZZZ",
        ),
    },
}
