tests/snapshots/d8__part_2_example.snap
---
source: tests/d8.rs
expression: example_3
---
Map {
    instructions: [
        Left,
        Right,
    ],
    nodes: {
        "11A": (
            "11B",
            "XXX",
        ),
        "11B": (
            "XXX",
            "11Z",
        ),
        "11Z": (
            "11B",
            "XXX",
        ),
        "22A": (
            "22B",
            "XXX",
        ),
        "22B": (
            "22C",
            "22C",
        ),
        "22C": (
            "22Z",
            "22Z",
        ),
        "22Z": (
            "22B",
            "22B",
        ),
        "XXX": (
            "XXX",
            "XXX",
        ),
    },
}
